--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title>Document</title>
+    <title>Admin Dashboard</title>
 </head>
 <body>
-    
+    <div class="container">
+        <header>Header</header>
+        <div class="sidebar">Sidebar</div>
+        <div class="main">Main</div>
+        <div class="anouncements">Anouncements</div>
+        <div class="trending">Trending</div>
+    </div>
+
 </body>
 </html>
