--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
     <div class="container">
         <header>Header</header>
-        <div class="sidebar">Sidebar</div>
+        <div class="sidebar">
+            <div class="sidebar-flex">
+                <img class="logo" src="/svg images/view-dashboard.svg" alt="">
+                <p class="logoName">Dashboard</p> 
+            </div>
+        </div>
         <div class="main">Main</div>
         <div class="anouncements">Anouncements</div>
         <div class="trending">Trending</div>
