Iesāku taisīt serach bar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 </head>
 <body>
     <div class="container">
-        <header>Header</header>
+        <header>
+            <div class="upperHeaderWrapper">
+                <div class="test">
+                    <img src="/svg images/magnify.svg" alt="" id="searchIcon">
+                    <input type="text" placeholder="" class="input">
+                </div>
+                
+                <div>
+                    <img src="/svg images/bell-ring-outline.svg" alt="" id="bellIcon">
+                </div>
+                
+            </div>
+        </header>
         <div class="sidebar">
             <div class="sidebar-flex">
                 <img class="logo" src="/svg images/view-dashboard.svg" alt="">
