--- a/index.html
+++ b/index.html
@@ -10,16 +10,32 @@
 <body>
     <div class="container">
         <header>
-            <div class="upperHeaderWrapper">
-                <div class="test">
+            <div class="upperHeaderPart">
+                <div class="searchSvg_searchBar">
                     <img src="/svg images/magnify.svg" alt="" id="searchIcon">
                     <input type="text" placeholder="" class="input">
                 </div>
-                
-                <div>
+                <div class="bellimg_name_profilepic">
                     <img src="/svg images/bell-ring-outline.svg" alt="" id="bellIcon">
+                    <img src="/Img/fox.jpg" alt="" class="upperRightProfilePic">
+                    <h3>MJ</h3>
                 </div>
-                
+            </div>
+
+            <div class="lowerHeaderPart">
+                <div class="pic_greeting_name">
+                    <img src="/Img/fox.jpg" alt="" class="lowerLeftImg">
+                    <div>
+                        <h5>Hi there,</h5>
+                        <h2 class="bigName">MJ (@mj)</h2>
+                    </div>
+                </div>
+
+                <div class="buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
             </div>
         </header>
         <div class="sidebar">
