--- a/index.html
+++ b/index.html
@@ -91,7 +91,14 @@
 
             
             
-        <div class="main">Main</div>
+        <div class="main">
+            <h4>Your Projects</h4>
+            <div class="main_grid">
+                <div>
+                    <h5>Super Cool Project</h5>
+                </div>
+            </div>
+        </div>
         <div class="anouncements">Anouncements</div>
         <div class="trending">Trending</div>
     </div>
