Added content in main

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 </div>
             </div>
         </header>
+
         <div class="sidebar">
             <div class="sidebar-flex">
                 <img class="logo" src="/svg images/view-dashboard.svg" alt="">
@@ -97,22 +98,41 @@
 
                 <div class="projects_container">
                     <div class="project">
-                        <h4>Less Cool Project</h4>
+                        <div class="inside_content"> 
+                            <h4>Less Cool Project</h4>
+                            <p class="project_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Atque porro modi nihil exercitationem quibusdam <br> animi ab nesciunt, saepe voluptatibus fugiat.</p>
+                        </div>
+                       
                     </div>
                     <div class="project">
-                        <h4>Impossible App</h4>
+                        <div class="inside_content">
+                            <h4>Impossible App</h4>
+                            <p class="project_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Atque porro modi nihil exercitationem quibusdam <br> animi ab nesciunt, saepe voluptatibus fugiat.</p>
+                        </div>
                     </div>
                     <div class="project">
-                        <h4>Smth else</h4>
+                        <div class="inside_content">
+                            <h4>Impossible App</h4>
+                            <p class="project_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Atque porro modi nihil exercitationem quibusdam <br> animi ab nesciunt, saepe voluptatibus fugiat.</p>
+                        </div>
                     </div>
                     <div class="project">
-                        <h4>Smth else</h4>
+                        <div class="inside_content">
+                            <h4>Impossible App</h4>
+                            <p class="project_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Atque porro modi nihil exercitationem quibusdam <br> animi ab nesciunt, saepe voluptatibus fugiat.</p>
+                        </div>
                     </div>
                     <div class="project">
-                        <h4>Smth else</h4>
+                        <div class="inside_content">
+                            <h4>Impossible App</h4>
+                            <p class="project_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Atque porro modi nihil exercitationem quibusdam <br> animi ab nesciunt, saepe voluptatibus fugiat.</p>
+                        </div>
                     </div>
                     <div class="project">
-                        <h4>Smth else</h4>
+                        <div class="inside_content">
+                            <h4>Impossible App</h4>
+                            <p class="project_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Atque porro modi nihil exercitationem quibusdam <br> animi ab nesciunt, saepe voluptatibus fugiat.</p>
+                        </div>
                     </div>
                 </div>
 
