--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
                         <div class="inside_content"> 
                             <h4>Less Cool Project</h4>
                             <p class="project_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Atque porro modi nihil exercitationem quibusdam <br> animi ab nesciunt, saepe voluptatibus fugiat.</p>
+                            <div class="content_svg">
+                                <img class="content_svg_img" src="/svg images/content svgs/star-plus-outline.svg" alt="">
+                                <img class="content_svg_img" src="/svg images/content svgs/eye-plus-outline.svg" alt="">
+                                <img class="content_svg_img" src="/svg images/content svgs/share-variant-outline.svg" alt="">
+                            </div>
                         </div>
                        
                     </div>
@@ -108,30 +113,56 @@
                         <div class="inside_content">
                             <h4>Impossible App</h4>
                             <p class="project_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Atque porro modi nihil exercitationem quibusdam <br> animi ab nesciunt, saepe voluptatibus fugiat.</p>
+                            <div class="content_svg">
+                                <img class="content_svg_img" src="/svg images/content svgs/star-plus-outline.svg" alt="">
+                                <img class="content_svg_img" src="/svg images/content svgs/eye-plus-outline.svg" alt="">
+                                <img class="content_svg_img" src="/svg images/content svgs/share-variant-outline.svg" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="project">
                         <div class="inside_content">
                             <h4>Impossible App</h4>
                             <p class="project_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Atque porro modi nihil exercitationem quibusdam <br> animi ab nesciunt, saepe voluptatibus fugiat.</p>
+                            <div class="content_svg">
+                                <img class="content_svg_img" src="/svg images/content svgs/star-plus-outline.svg" alt="">
+                                <img class="content_svg_img" src="/svg images/content svgs/eye-plus-outline.svg" alt="">
+                                <img class="content_svg_img" src="/svg images/content svgs/share-variant-outline.svg" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="project">
                         <div class="inside_content">
                             <h4>Impossible App</h4>
                             <p class="project_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Atque porro modi nihil exercitationem quibusdam <br> animi ab nesciunt, saepe voluptatibus fugiat.</p>
+                            <div class="content_svg">
+                                <img class="content_svg_img" src="/svg images/content svgs/star-plus-outline.svg" alt="">
+                                <img class="content_svg_img" src="/svg images/content svgs/eye-plus-outline.svg" alt="">
+                                <img class="content_svg_img" src="/svg images/content svgs/share-variant-outline.svg" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="project">
                         <div class="inside_content">
                             <h4>Impossible App</h4>
                             <p class="project_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Atque porro modi nihil exercitationem quibusdam <br> animi ab nesciunt, saepe voluptatibus fugiat.</p>
+                            <div class="content_svg">
+                                <img class="content_svg_img" src="/svg images/content svgs/star-plus-outline.svg" alt="">
+                                <img class="content_svg_img" src="/svg images/content svgs/eye-plus-outline.svg" alt="">
+                                <img class="content_svg_img" src="/svg images/content svgs/share-variant-outline.svg" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="project">
                         <div class="inside_content">
                             <h4>Impossible App</h4>
                             <p class="project_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Atque porro modi nihil exercitationem quibusdam <br> animi ab nesciunt, saepe voluptatibus fugiat.</p>
+                            
+                            <div class="content_svg">
+                                <img class="content_svg_img" src="/svg images/content svgs/star-plus-outline.svg" alt="">
+                                <img class="content_svg_img" src="/svg images/content svgs/eye-plus-outline.svg" alt="">
+                                <img class="content_svg_img" src="/svg images/content svgs/share-variant-outline.svg" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
